# fastah

./: .gitignore  README.md  pyproject.toml
src/fastah/: __init__.py  cli.py  fasta.py
src/fastah/compression/: __init__.py  _bgzf.py  _zstd.py
tests/: test_fasta.py
