[project]
name = "fastah"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "fastah.__version__"}

[project.scripts]
fastah = "fastah.cli:main"

[project.optional-dependencies]
zstd = ["zstandard"]
